# fleetmaster_bot

./: .gitignore  Procfile  fleetmaster.rar  index.py  main.py  pyproject.toml  requirements.txt
api/: index.py
config/: __init__.py  db.py  settings.py
core/: __init__.py  bot.py
handlers/: __init__.py  admin.py  admin_commands.py  admin_dbcheck.py  admin_refresh.py  admin_tools.py  admin_users.py  auto_detect_groups.py  auto_link_groups.py  documents.py  manage_users.py  pm_services.py  pm_tracker.py  pm_trucker.py  registration.py  search.py  start.py  sync_groups.py  trailer.py
handlers/admin/: __init__.py  actions.py  callbacks.py  panel.py
keyboards/: __init__.py  admin.py  documents.py  main_menu.py  manage_users.py  pm_services.py  pm_tracker.py  pm_trucker.py  trailer.py
middlewares/: auth_guard.py  chat_guard.py
scripts/: import_logs_to_db.py
services/: __init__.py  access_control.py  email_verification.py  google_ops_service.py  google_service.py  group_map.py  samsara_service.py  user_service.py
utils/: __init__.py  file_search.py  logger.py  logger_location.py  mailer.py  parsers.py  pm_formatter.py  reg_index.py  registration_cache.py
utils/helpers/: __init__.py  keyboard_helpers.py  location_helpers.py  text_helpers.py  vehicle_helpers.py
