[project]
name = "fleetmaster"
version = "1.0.0"
description = "FleetMaster Telegram Bot"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

# ==============================================================
# FORMATTER
# ==============================================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ==============================================================
# LINTER
# ==============================================================
[tool.ruff.lint]
select = [
    "E", "F", "W", "B", "N", "UP", "I", "SIM", "PL",
]
ignore = ["E501"]

# ==============================================================
# IMPORT SORTER (latest ruff rules)
# ==============================================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["handlers", "config", "utils", "services"]
default-section = "thirdparty"

# MUST FIX WARNING:
section-order = [
    "future",
    "standard-library",
    "thirdparty",        # <--- this is the important fix
    "firstparty",
    "local-folder",
]
