[project]
name = "fleetmaster"
version = "1.0.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

# ----------------- FORMATTER -----------------
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ----------------- LINTER --------------------
[tool.ruff.lint]
select = [
    "E", "F", "W",
    "B", "N", "UP",
    "I", "SIM"
]

ignore = [
    "E501",
    "PLR2004",
]

# ----------------- ISORT (IMPORT SORTER) -----
[tool.ruff.lint.isort]
combine-as-imports = true

default-section = "third-party"

section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

known-first-party = ["handlers", "config", "services", "utils"]
